# emblogx

./: API.md  CITATION.cff  README.md  library.properties
src/: emblogx.h
src/emblogx/: async_dispatcher.cpp  async_dispatcher.h  config.h  logger.h  logger_core.cpp  logger_core.h  types.h
src/emblogx/sinks/: console_sink.cpp  console_sink.h  http_sink.cpp  http_sink.h  i_sink.h  memory_sink.cpp  memory_sink.h  sd_sink.cpp  sd_sink.h
tests/: CMakeLists.txt  test_emblogx.cpp
